Fixed overflow on about section, further work needed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,7 +18,7 @@ body {
 
 footer {
   background: var(--color-primary);
-  height: 40vh;
+  height: 45vh;
 }
 
 :root {
@@ -141,10 +141,12 @@ footer {
   width: 100%;
   display: flex;
   position: relative;
+  overflow: hidden;
 }
 
 .about-container__description {
   max-width: 38%;
+  max-height: 90%;
   position: absolute;
   justify-content: flex-start;
   top: 7rem;
@@ -278,8 +280,8 @@ footer {
 }
 
 .pricing-container__card-container {
-  width: 45rem;
-  height: 65rem;
+  width: 28%;
+  height: 75%;
 }
 
 .pricing-container__card-container:hover .cards {
@@ -485,13 +487,13 @@ footer {
   box-shadow: 0 0 3pt 1pt var(--color-primary);
 }
 
-.form-container__submit-btn, .form-container__submit-btn::before {
+.form-container__submit-btn {
   position: relative;
   align-self: center;
   margin-top: 3rem;
   border: none;
   width: 75%;
-  height: 8.5rem;
+  height: 100%;
   border-radius: 50px;
   font-size: 2.9rem;
   font-weight: bold;
@@ -507,12 +509,16 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .footer-content__logoEtElse {
+  height: 95%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position: absolute;
+  top: 20%;
   line-height: 2;
 }
 
