--- a/SASS/_base.scss
+++ b/SASS/_base.scss
@@ -21,5 +21,5 @@ body{
 
 footer{
     background: var(--color-primary);
-    height: 40vh;
+    height: 45vh;
 }
